--- a/assets/fullcalendar/demos/default.html
+++ b/assets/fullcalendar/demos/default.html
@@ -37,7 +37,7 @@
 					id: 999,
 					title: 'Repeating Event',
 					start: new Date(y, m, d+4, 16, 0),
-					allDay: false
+					allDay: true
 				},
 				{
 					title: 'Meeting',
